2.0.15
	+ Fix last report link in Subscription page
	+ Add reportAdminPort to let Zentyal Cloud know the TCP port where
	  the server UI is listening to
	+ Catch all exceptions when the server is not connected to Cloud
2.0.14
	+ Remove unecessary parameter when making automatic backup
2.0.13
	+ Moved EBox::Exceptions::RemoteServices::NotConnected to libebox
	  to avoid errors when remoteservices is not installed
2.0.12
	+ Avoid log entry with unexistant file
	+ Using unconfigured interfaces as last resort to connect to Cloud
	+ Added exception for no connection to Cloud
2.0.11
	+ Bugfix: Migration for VPN clients to new local port and address
	  options works
	+ Bugfix: VPN local address tests are now quiet
	+ Enforcing type in SOAP response is now allowed
2.0.10
	+ Added new models to show information about our several services:
	  - Server subscriptions
	  - Advanced Security Updates
	  - Disaster Recovery
	  - Technical Support
	+ New Zentyal Cloud client widget with new services information
	+ Remote services VPN client now uses local port and address options
	+ Bugfix: fixed error in remote backup template when a basic
	  subscription already has a backup in the cloud
2.0.9
	+ Added WS and VPN server connectivity check upon subscription
	+ Bugfix: package removal does not crash if can't unsubscribe
	+ Bugfix: Remove key field in consolidation which is useless in
	  this context and it leads to errors everyday of the month except
	  the first one
	+ Indicate script to run when changing configuration file
2.0.8
	+ Remote backup is now overwritten with Basic Subscription
	+ Using a new key from bundle or dnsServer as fallback to set the
	  set of addresses to access from Zentyal Cloud
	+ Added check to not use any address when connected to Zentyal
	  Cloud to do remote support
2.0.7
	+ Added backup/restore of subscription credentials
	+ Added API to get the list of registered Zentyal servers
	+ Added API to get the backup credentials if available